--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,36 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "root": true,
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript",
+    "plugin:tailwindcss/recommended",
+    "plugin:jsx-a11y/recommended"
+  ],
+  "plugins": ["simple-import-sort", "unused-imports", "jsx-a11y"],
+  "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ],
+    "@typescript-eslint/no-empty-interface": "off",
+    // Automatically sort imports
+    "simple-import-sort/imports": "off",
+    "simple-import-sort/exports": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "tailwindcss/no-custom-classname": "off",
+
+    // Accessibility and SEO-related rules
+
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/alt-text": "warn", // Ensure alt text is provided for <img>, <area>, etc.
+    "jsx-a11y/anchor-has-content": "warn", // Ensure <a> tags have content for better SEO
+    "jsx-a11y/anchor-is-valid": "warn" // Ensure valid href attributes in <a> tags
+  }
 }
