--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Profile/about-section.jsx", "src/components/Profile/achivement-popup.jsx", "src/components/Profile/stats-section.jsx", "src/components/Profile/user-profile.jsx", "src/components/Profile/profile-header.jsx", "src/components/Profile/posts-section.jsx", "src/components/Profile/items-for-sale-section.jsx", "src/components/Profile/index.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Profile/about-section.jsx", "src/components/Profile/achivement-popup.jsx", "src/components/Profile/stats-section.jsx", "src/components/Profile/user-profile.jsx", "src/components/Profile/profile-header.tsx", "src/components/Profile/posts-section.jsx", "src/components/Profile/items-for-sale-section.jsx", "src/components/Profile/index.tsx", "src/store/slices/auth/login.slice.ts"],
   "exclude": ["node_modules"]
 }
