--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "sonner": "^1.7.1",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
