--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
+    "moment": "^2.30.1",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
