--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
@@ -32,6 +32,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.9",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
@@ -46,7 +47,6 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "sonner": "^1.7.1",
-    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
