--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.1.7",
     "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
